--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: portfolio_app
-description: "A new Flutter project."
+name: project_app
+description: "A simple app."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,7 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.3.1
+  shared_preferences: ^2.0.0
+  font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.5
+  http: ^0.13.6
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.17.5
+  cloud_firestore: ^4.17.0
+  fl_chart: ^0.64.0
+  provider: ^6.1.1
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +72,14 @@ flutter:
     - assets/profile.jpg
     - assets/portfolio.png
     - assets/todo.png
+    - assets/weather.png
+    - assets/movie.png
+    - assets/chat.png
+    - assets/moodify.png
+    - assets/products.json
+    - assets/ecommerce.png
+    - assets/images/sneakers.png
+    - assets/images/backpack.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
